# cpp_event_framework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.properties.json  cmake.yml
examples/: SimpleStatemachineExample.cxx
examples/activeobject/: Fsm.cxx  Fsm.hxx  FsmImpl.cxx  FsmImpl.hxx  IFsmImpl.hxx
examples/activeobject_embedded/: Fsm.cxx  Fsm.hxx  FsmImpl.cxx  FsmImpl.hxx  IFsmImpl.hxx
examples/interface/: Fsm.cxx  Fsm.hxx  FsmImpl.cxx  FsmImpl.hxx  IFsmImpl.hxx
examples/pimpl/: Fsm.cxx  Fsm.hxx  FsmImpl.cxx  FsmImpl.hxx
examples/plain/: FsmImpl.cxx  FsmImpl.hxx
examples/signals/: Fsm.cxx  Fsm.hxx  FsmImpl.cxx  FsmImpl.hxx  IFsmImpl.hxx
include/cpp_active_objects/: ActiveObjectBase.hxx  ActiveObjectDomainBase.hxx  EventQueue.hxx  Hsm.hxx  IActiveObject.hxx  IActiveObjectDomain.hxx  IEventQueue.hxx  IEventTarget.hxx  PriorityEventQueue.hxx  SingleThreadActiveObjectDomain.hxx  ThreadSafeEventQueue.hxx
include/cpp_active_objects_embedded/: ActiveObjectBase.hxx  ActiveObjectDomainBase.hxx  EventQueue.hxx  Hsm.hxx  IActiveObject.hxx  IActiveObjectDomain.hxx  IEventQueue.hxx  IEventTarget.hxx  SingleThreadActiveObjectDomain.hxx
include/cpp_event_framework/: ActiveObjectBase.hxx  ActiveObjectDomain.hxx  ActiveObjectDomainBase.hxx  Concepts.hxx  DemangledTypeName.hxx  HeapAllocator.hxx  Hsm.hxx  IActiveObject.hxx  IActiveObjectDomain.hxx  Pool.hxx  Signal.hxx  Statemachine.hxx  StaticPool.hxx  ThreadSafeEventQueue.hxx  ThreadedActiveObjectDomain.hxx
include/experimental/: ActiveObjectBase.hxx  ActiveObjectDomainBase.hxx  Hsm.hxx  IActiveObject.hxx  IActiveObjectDomain.hxx  IEventQueue.hxx  IEventTarget.hxx  SingleThreadActiveObjectDomain.hxx  ThreadSafeEventQueue.hxx  ThreadedActiveObjectDomain.hxx
test/: ActiveObjectFrameworkEmbedded_unittest.cxx  ActiveObjectFramework_unittest.cxx  Events_unittest.cxx  FsmDeclaration.hxx  FsmInstance.hxx  FsmPrototypes.hxx  Statemachine_unittest.cxx  main.cxx
